cambiando ruta js

--- a/index.html
+++ b/index.html
@@ -372,6 +372,6 @@
     <!--script iconos-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="js/principal.js"></script>
+    <script src="Js/principal.js"></script>
 </body>
 </html>
