--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/principal.css">
     <!--estilos seccion de index-->
     <link rel="stylesheet" href="css/index.css">
-    <link rel="shortcut icon" href="images/logosEtc/MacondoFavicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/logosEtc/MacondoFavicon.png" type="image/x-icon">
     <title>Inicio | Macondo</title>
 </head>
 <body>
