--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </nav>
     <header>
         <div class="logo">
-            <img src="images/logosEtc/MacondoLogo.png" alt="Logo Macondo" id="Logo_macondo">
+            <img src="./images/logosEtc/MacondoLogo.png" alt="Logo Macondo" id="Logo_macondo">
         </div>
     <aside>
         <!--*tema claro y oscuro*-->
