--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h2>Bienvenido <p id="title2">a Macondo</p></h2>
             <h3>Donde las historias cobran vida</h3>
             <img id="mariposa" src="images/mariposaAmarilla.gif" alt="">
-            <img id="lectura" src="images/lectura.svg" alt="">
+            <img id="lectura" src="./images/lectura.svg" alt="">
         </div>
     </section>
     <section class="first-section">
