--- a/index.html
+++ b/index.html
@@ -368,6 +368,10 @@
         <li>correo@macondoLibros.com</li>
     </ul>
 </footer>
+    
+    <div class="loader_container">
+        <div class="loader"></div>
+    </div>
 
     <!--script iconos-->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
