--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="./images/logosEtc/MacondoFavicon.png" type="image/x-icon">
     <title>Inicio | Macondo</title>
 </head>
-<body>
+<body class="dark">
     <nav>
         <div class="navigation">
             <ul class="navbar__menu">
